fix: separate Windows and Unix build steps in GitHub Actions
- Split build command into separate steps for Windows and Unix
- Fix Windows executable extension handling
- Separate artifact upload steps for better error handling
- Ensure proper binary naming across all platforms

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,17 +30,30 @@ jobs:
     - name: Get dependencies
       run: go mod download
 
-    - name: Build
-      run: go build -v -o prom-cli-${{ runner.os }}-go${{ matrix.go-version }}${{ runner.os == 'Windows' && '.exe' || '' }} ./cmd/prom-cli
+    - name: Build (Unix)
+      if: runner.os != 'Windows'
+      run: go build -v -o prom-cli-${{ runner.os }}-go${{ matrix.go-version }} ./cmd/prom-cli
+
+    - name: Build (Windows)
+      if: runner.os == 'Windows'
+      run: go build -v -o prom-cli-${{ runner.os }}-go${{ matrix.go-version }}.exe ./cmd/prom-cli
 
     - name: Test
       run: go test -v ./...
 
-    - name: Upload artifact
+    - name: Upload artifact (Unix)
+      if: runner.os != 'Windows'
       uses: actions/upload-artifact@v4
       with:
         name: prom-cli-${{ runner.os }}-go${{ matrix.go-version }}
-        path: prom-cli-${{ runner.os }}-go${{ matrix.go-version }}${{ runner.os == 'Windows' && '.exe' || '' }}
+        path: prom-cli-${{ runner.os }}-go${{ matrix.go-version }}
+
+    - name: Upload artifact (Windows)
+      if: runner.os == 'Windows'
+      uses: actions/upload-artifact@v4
+      with:
+        name: prom-cli-${{ runner.os }}-go${{ matrix.go-version }}
+        path: prom-cli-${{ runner.os }}-go${{ matrix.go-version }}.exe
 
   release:
     name: Create Release
