fix(ci): 🔨 Set correct main path for GoReleaser
GoReleaser was looking for the main package in the root directory.

This commit updates the build configuration to point to './cmd/prom-cli', resolving the 'no main function' error.

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -20,7 +20,7 @@ builds:
       - 386
       - arm64
     binary: "prom-cli"
-    main: "."
+    main: "./cmd/prom-cli"
     ldflags:
       - "-s -w"
       - "-X main.version={{.Version}}"
