--- a/.goreleaser.dev.yaml
+++ b/.goreleaser.dev.yaml
@@ -13,7 +13,7 @@ builds:
     goarch:
       - amd64
     binary: "prom-cli"
-    main: "."
+    main: "./cmd/prom-cli"
     ldflags:
       - "-s -w"
       - "-X main.version={{.Version}}"
