--- a/.goreleaser.dev.yaml
+++ b/.goreleaser.dev.yaml
@@ -32,6 +32,7 @@ archives:
     files:
       - README.md
       - LICENSE
+      - prom-cli.example.yaml
 
 checksum:
   name_template: "{{ .ProjectName }}_checksums.txt"
