--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -39,6 +39,7 @@ archives:
     files:
       - README.md
       - LICENSE
+      - prom-cli.example.yaml
 
 checksum:
   name_template: "{{ .ProjectName }}_checksums.txt"
